--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 APP_NAME=Laravel
 APP_ENV=local
-APP_KEY=base64:/jUddHXrMZn1+BwZGmJ6bLP7saaGlLS8lIIF/kFIWEw=
+APP_KEY=base64:7Djr7X1ngZgxdEG9xvtxFBcy2zsJfbVeLWf/hO+67pg=
 APP_DEBUG=true
 APP_TIMEZONE=UTC
 APP_URL=http://localhost
@@ -22,7 +22,7 @@ LOG_LEVEL=debug
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=eventbd
+DB_DATABASE=bdShow
 DB_USERNAME=root
 DB_PASSWORD=
 
